packages/fuels-abigen-macro/tests/ui/missing_name_attr.stderr
error: 'name' attribute is missing!
 --> tests/ui/missing_name_attr.rs:3:18
  |
3 | abigen!(Contract(abi = "some-abi.json"));
  |                  ^^^
